[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/World/World.gd" type="Script" id=1]
[ext_resource path="res://Scenes/World/Scroller.gd" type="Script" id=2]
[ext_resource path="res://Res/Fonts/Res/nobile.tres" type="DynamicFont" id=3]

[node name="World" type="Node2D"]
script = ExtResource( 1 )
map_size_square = 1600
artic_threshold = 40

[node name="RenderManager" type="Node2D" parent="."]

[node name="MapRender" type="Sprite" parent="RenderManager"]

[node name="Scroller" type="KinematicBody2D" parent="."]
position = Vector2( 644, 358 )
script = ExtResource( 2 )
speed = 500

[node name="Camera" type="Camera2D" parent="Scroller"]
current = true

[node name="Cities" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ZoomContainer" type="MarginContainer" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -88.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZoomButtons" type="VBoxContainer" parent="UI/ZoomContainer"]
margin_right = 91.0
margin_bottom = 60.0

[node name="ZoomIn" type="Button" parent="UI/ZoomContainer/ZoomButtons"]
margin_right = 91.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "Zoom In"

[node name="ZoomOut" type="Button" parent="UI/ZoomContainer/ZoomButtons"]
margin_top = 30.0
margin_right = 91.0
margin_bottom = 56.0
text = "Zoom Out"

[connection signal="button_down" from="UI/ZoomContainer/ZoomButtons/ZoomIn" to="." method="_on_ZoomIn_button_down"]
[connection signal="button_up" from="UI/ZoomContainer/ZoomButtons/ZoomIn" to="." method="_on_ZoomIn_button_up"]
[connection signal="button_down" from="UI/ZoomContainer/ZoomButtons/ZoomOut" to="." method="_on_ZoomOut_button_down"]
[connection signal="button_up" from="UI/ZoomContainer/ZoomButtons/ZoomOut" to="." method="_on_ZoomOut_button_up"]
